--- a/Comunity Site/Q&A.html
+++ b/Comunity Site/Q&A.html
@@ -37,6 +37,9 @@
             </div>
             <div class="side2-menu">
                 <a href="#"><p>All</p></a>
+                <a href="#"><p>C</p></a>
+                <a href="#"><p>Java</p></a>
+                <a href="#"><p>Web Publishing</p></a>
             </div>
         </div>
     </div>
