--- a/Comunity Site/information.html
+++ b/Comunity Site/information.html
@@ -31,12 +31,26 @@
             </div>
         </div>
 
+        <!-- side header 2 -->
         <div class="box2">
             <div class="side2-title">
                 <h3><a href="./information.html"><p>Information</p></a></h3><hr>
             </div>
+
             <div class="side2-menu">
-                <a href="#"><p>Developer</p></a>
+                <a href="#"><p>Front-end Developer</p></a>
+                <a href="#"><p>Back-end Developer</p></a>
+                <a href="https://github.com/tting1245/AssignmentViewer">Github</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+
+        <div class="front">
+            <div class="profile">
+                <p>Front-end Developer</p>
+                <img src="./public/img/Profile.jpg">
             </div>
         </div>
     </div>
