--- a/Comunity Site/join.html
+++ b/Comunity Site/join.html
@@ -7,7 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <link rel="shortcut icon" href="./public/img/favicon/favicon.ico">
-        <link rel="stylesheet" href="./public/css/index.css">
+        <link rel="stylesheet" href="./public/css/join.css">
         <title>Assignment | JOIN US</title>
     </head>
     <body>
@@ -36,7 +36,26 @@
 
         <!-- container -->
         <div class="container">
-            
+            <div class="container-join">
+                <form method="POST">
+                    <div class="form-group">
+                        <label for="exampleInputName">Name</label>'
+                        <input type="name" class="form-control" id="exampleInputName" aria-describedby="nameHelp" placeholder="Name">
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="exampleInputId">ID</label>
+                        <input type="id" class="form-control" id="exampleInputId1" aria-describedby="idlHelp" placeholder="ID">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"><br>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirm password">
+                    </div>
+                        <button type="submit" class="btn btn-primary"><a href="./join.html" style="color: #fff">Join Us</a></button>                
+                </form>
+            </div>
         </div>
 
     </body>
