--- a/Comunity Site/login.html
+++ b/Comunity Site/login.html
@@ -7,7 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <link rel="shortcut icon" href="./public/img/favicon/favicon.ico">
-        <link rel="stylesheet" href="./public/css/index.css">
+        <link rel="stylesheet" href="./public/css/login.css">
         <title>Assignment | LOGIN</title>
     </head>
     <body>
@@ -36,7 +36,21 @@
 
         <!-- container -->
         <div class="container">
-            
+            <div class="container-login" style="margin-top: 100px;">
+                <form method="POST">
+                    <div class="form-group" style="width: 300px">
+                        <label for="exampleInputEmail1">ID</label>
+                        <input type="id" class="form-control" id="exampleInputId1" aria-describedby="idlHelp" placeholder="ID">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group" style="width: 300px">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary"><a href="./join.html" style="color: #fff">Join Us</a></button>                
+                </form>
+            </div>
         </div>
 
     </body>
