--- a/Community Site/Q&A.html
+++ b/Community Site/Q&A.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./public/img/favicon/favicon.ico">
-    <link rel="stylesheet" href="./public/css/category.css">
+    <link rel="stylesheet" href="./public/css/Q&A.css">
     <title>Assignment | Comunity Site - Q&A</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="side-content">
-                <a href="./comunity.html"><li><img src="./public/img/chat.png" title="Comunity"></a></li>
+                <a href="./community.html"><li><img src="./public/img/chat.png" title="Comunity"></a></li>
                 <a href="./Q&A.html"><li><img src="./public/img/Q&A.png" title="Q&A"></a></li>
                 <a href="./information.html"><li><img src="./public/img/information.png" title="Information"></a></li>
             </div>
