--- a/Community Site/index.html
+++ b/Community Site/index.html
@@ -26,7 +26,7 @@
 
                 <div class="side-content">
                     <div class="side-menu">
-                        <a href="./comunity.html"><li><img src="./public/img/chat.png"> Comunity</a></li><br>
+                        <a href="./community.html"><li><img src="./public/img/chat.png"> Community</a></li><br>
                         <a href="./Q&A.html"><li><img src="./public/img/Q&A.png"> Q&A</a></li><br>
                         <a href="./information.html"><li><img src="./public/img/information.png"> Information</a></li>
                     </div>
@@ -36,7 +36,89 @@
 
         <!-- container -->
         <div class="container">
-            
+            <div class="All">
+                <h3><strong><p>All</p></strong></h3><hr>
+            </div>
+
+            <div class="All-post">
+                <div class="All-post1">
+                    <p><strong>C언어 질문</strong></p><br> <p>2019.04.14 | 17:20</p>
+                    <p>C언어 관련 서적 중에 추천해주실 만한 서적 있을까요??<br>
+                        책이 많아서 어떤 걸 봐야할지 모르겠네요ㅜㅜ<br>
+                        도와주세요!!
+                    </p>                    
+                </div>
+
+                <div class="All-post2">
+                    <p><strong>HTML 질문</strong></p><br> <p>2019.04.14 | 16:49</p>
+                    <p>HTML5 현재 공부 중인 학생입니다.<br>
+                        HTML 배운 다음 CSS를 배울 예정인데<br>
+                        그 다음 언어 진도를 모르겠습니다...
+                        조언 부탁드립니다</p>
+                </div>
+            </div>
+
+            <div class="C">
+                <h3><strong><p>C</p></strong></h3><hr>
+            </div>
+
+            <div class="C-post">
+                <div class="C-post1">
+                    <p><strong>C언어 질문</strong></p><br> <p>2019.04.14 | 17:20</p>
+                    <p>C언어 관련 서적 중에 추천해주실 만한 서적 있을까요??<br>
+                        책이 많아서 어떤 걸 봐야할지 모르겠네요ㅜㅜ<br>
+                        도와주세요!!
+                    </p>
+                </div>
+
+                <div class="C-post2">
+                    <p><strong>C언어 스터디 모집</strong></p><br> <p>2019.04.14 | 16:26</p>
+                    <p>C언어 스터디 인원 모집합니다.<br>
+                        장소는 협의 후 결정하고 비용은 스터디룸 비용 5000원 입니다.<br>
+                        매달 1일 선입금 방식입니다. OOO-OOOO-OOOO으로 연락 주세요!</p>
+                </div>
+            </div>
+
+            <div class="Java">
+                <h3><strong><p>JAVA</p></strong></h3><hr>
+            </div>
+
+            <div class="Java-post">
+                <div class="Java-post1">
+                    <p><strong>JAVA 안드로이드 프로그래밍 서적 추천</strong></p><br> <p>2019.04.14 | 16:40</p>
+                    <p>Do it! 안드로이드 앱 프로그래밍이라는 책인데요<br>
+                        물론 JAVA 프로그래밍은 어느정도 알고 계셔야 해요~<br>
+                        다들 열공 하세요 ㅎㅎ</p>
+                </div>
+
+                <div class="Java-post2">
+                    <p><strong>안녕하세요!</strong></p><br> <p>2019.04.14 | 15:59</p>
+                    <p>안녕하세요 자바 초보자 입니다.<br>
+                        여기서 많이 배워가려고 해요!<br>
+                        잘 부탁드립니다~~</p>
+                </div>
+            </div>
+
+            <div class="web">
+                <h3><strong><p>Web Publishing</p></strong></h3><hr>
+            </div>
+
+            <div class="web-post">
+                <div class="web-post1">
+                    <p><strong>HTML 질문</strong></p><br> <p>2019.04.14 | 16:49</p>
+                    <p>HTML5 현재 공부 중인 학생입니다.<br>
+                        HTML 배운 다음 CSS를 배울 예정인데<br>
+                        그 다음 언어 진도를 모르겠습니다...
+                        조언 부탁드립니다</p>
+                </div>
+
+                <div class="web-post2">
+                    <p><strong>생활코딩 강의 좋네요</strong></p><br> <p>2019.04.14 | 16:30</p>
+                    <p>html, css, javascript 등등 강의 보면서 공부하는데<br>
+                        알기 쉽게 잘 알려시고 너무 좋네요.<br>
+                        웹 배우시려는 분들께 강추드립니다!!</p>
+                </div>
+            </div>
         </div>
 
     </body>
