--- a/Community Site/login.html
+++ b/Community Site/login.html
@@ -26,7 +26,7 @@
 
                 <div class="side-content">
                     <div class="side-menu">
-                        <a href="./comunity.html"><li><img src="./public/img/chat.png"> Comunity</a></li><br>
+                        <a href="./community.html"><li><img src="./public/img/chat.png"> Comunity</a></li><br>
                         <a href="./Q&A.html"><li><img src="./public/img/Q&A.png"> Q&A</a></li><br>
                         <a href="./information.html"><li><img src="./public/img/information.png"> Information</a></li>
                     </div>
